--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-sass": "^9.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "reactstrap": "^7.1.0",
     "styled-components": "^4.4.1"
