--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "json-server": "^0.17.4",
     "node-sass": "^9.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
